2006-05-04  Ulrich Drepper  <drepper@redhat.com>

	* sunrpc/key_call.c (__rpc_thread_key_cleanup): Also free
	client->cl_auth.

	* sunrpc/rpc_thread.c (__rpc_thread_destroy): Don't skip entire
	cleanup for initial thread, just the free call on TVP.

	* nscd/gai.c (__getline): Define.


See ChangeLog.16 for earlier changes.