@@ -1,5 +1,7 @@
 2006-05-04  Ulrich Drepper  <drepper@redhat.com>
 
+	* sunrpc/xdr_array.c (xdr_array): Use calloc instead of malloc&bzero.
+
 	* sunrpc/key_call.c (__rpc_thread_key_cleanup): Also free
 	client->cl_auth.
 
